fixed alignment

--- a/styles.css
+++ b/styles.css
@@ -110,6 +110,9 @@ span{
 }
 @media(max-width:1000px)
 {
+    body{
+        text-align: center;
+    }
     .section{
         grid-template-columns: auto;
         margin: 0;
